--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </section>
 
         <footer style="text-align: center; color: #888; font-size: 0.75rem; padding: 2rem 0;">
-            &copy; 2026 งานทะเบียนวัดผล โรงเรียนบรรหารแจ่มใสวิทยา 1 | พัฒนาโดย ฝ่าย ICT
+            &copy; 2026 ออกแบบและพัฒนาระบบโดย นายเมธี ใจสุขดี นิสิตคณะศึกษาศาสตร์และพัฒนศาสตร์ มก.กพส.
         </footer>
     </main>
 </div>
